--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 {
   font-size: 16em;
   font-weight: bold;
   color: #e62041;
-  text-shadow: #cc223e 1px 1px 0, #cc223e 2px 2px 0, #cc223e 3px 3px 0, #cc223e 4px 4px 0, #cc223e 5px 5px 0, #cc223e 6px 6px 0;
+  text-shadow: #cc223e 1px 1px 0, #cc223e 2px 2px 0, #cc223e 3px 3px 0, #cc223e 4px 4px 0, #cc223e 5px 5px 0, #cc223e 6px 6px 0, #cc223e 7px 7px 0, #cc223e 8px 8px 0;
   margin: 60px 0 20px; }
   h1 + p {
     font-size: 4em;
