--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,13 @@ a {
   .column:not(:first-child) {
     margin: 50px auto; }
 
+.column-six {
+  width: 50%;
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 /* LAYOUT END */
 /* HEADING ANG TEXTS */
 h1 {
