--- a/css/hansel.css
+++ b/css/hansel.css
@@ -1,11 +1,10 @@
-.hansel-back.theme {
-  color: #fcecd2;
-  background: #e62041;
-  border-color: #cb213d; }
-  .hansel-back.theme:after {
-    border-color: #fcecd2 transparent transparent transparent; }
-  .hansel-back.theme:hover {
-    background: #cb213d; }
+.hansel-pocket {
+  width: 100%;
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative; }
 
 .hansel-back {
   display: block;
@@ -13,14 +12,13 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  height: 54px;
+  height: 50px;
   font-size: 2em;
   line-height: 2.5em;
   padding: 0 20px;
   position: relative;
   color: black;
   background: white;
-  border: 2px solid #cccccc;
   -webkit-transition-property: all;
   -moz-transition-property: all;
   -o-transition-property: all;
@@ -44,21 +42,65 @@
     -moz-transition-duration: 0.3s;
     -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
-    -webkit-transform-origin: 8px 4px;
-    -moz-transform-origin: 8px 4px;
-    -ms-transform-origin: 8px 4px;
-    -o-transform-origin: 8px 4px;
-    transform-origin: 8px 4px;
-    border-color: black transparent transparent transparent;
-    top: 22px;
-    right: 20px; }
-  .hansel-back:hover {
+    -webkit-transform-origin: 4px 8px;
+    -moz-transform-origin: 4px 8px;
+    -ms-transform-origin: 4px 8px;
+    -o-transform-origin: 4px 8px;
+    transform-origin: 4px 8px;
+    border-color: transparent transparent transparent black;
+    top: 18px;
+    right: 16px; }
+  .hansel-back:hover, .hansel-back.active {
     background: #cccccc; }
   .hansel-back.active:after {
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg); }
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg); }
   .hansel-back.active + .hansel-breadcrumbs {
     display: block; }
+
+@media only screen and (max-width: 2560px), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  .hansel-breadcrumbs {
+    width: 100%;
+    display: none;
+    background: white;
+    position: absolute;
+    top: 65px; }
+    .hansel-breadcrumbs:before {
+      content: "";
+      width: 0px;
+      height: 0px;
+      background: transparent;
+      border: 8px solid white;
+      border-color: transparent transparent white transparent;
+      position: absolute;
+      top: -16px;
+      right: 20px; }
+    .hansel-breadcrumbs a {
+      height: 50px;
+      display: block;
+      color: black;
+      font-size: 1.6em;
+      line-height: 3.2em;
+      padding: 0 20px;
+      position: relative; }
+      .hansel-breadcrumbs a:after {
+        content: "";
+        width: 0px;
+        height: 3px;
+        background: #cccccc;
+        -webkit-transition-property: all;
+        -moz-transition-property: all;
+        -o-transition-property: all;
+        transition-property: all;
+        -webkit-transition-duration: 0.3s;
+        -moz-transition-duration: 0.3s;
+        -o-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        position: absolute;
+        bottom: 0px;
+        left: 0px; }
+      .hansel-breadcrumbs a:hover:after {
+        width: 100%; } }
