--- a/css/theme.css
+++ b/css/theme.css
@@ -1,9 +1,9 @@
-.hansel-back.theme {
+.hansel-crumb.theme {
   color: #fcecd2;
   background: #e62041; }
-  .hansel-back.theme:after {
+  .hansel-crumb.theme:after {
     border-color: transparent transparent transparent #fcecd2; }
-  .hansel-back.theme:hover, .hansel-back.theme.active {
+  .hansel-crumb.theme:hover, .hansel-crumb.theme.active {
     background: #6e5960; }
 
 @media only screen and (max-width: 2560px), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
