--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -2,7 +2,7 @@ $color: #e62041;
 $dark-color: #6E5960;
 $light-color: #fcecd2;
 
-.hansel-back.theme {
+.hansel-crumb.theme {
 	color: $light-color;
 	background: $color;
 
