--- a/sass/hansel.scss
+++ b/sass/hansel.scss
@@ -6,6 +6,8 @@
 	@include transition-duration(0.3s);
 }
 
+$main-color: #E8D7BB;
+
 .hansel-pocket {
 	width: 100%;
 	display: inline-block;
@@ -13,7 +15,7 @@
 	position: relative;
 }
 
-.hansel-back {
+.hansel-crumb {
 	display: block;
 	width: 100%;
 	@include box-sizing(border-box);
@@ -23,7 +25,7 @@
 	padding: 0 20px;
 	position: relative;
 	color: black;
-	background: white;
+	background: darken($main-color, 10%);
 	@include hansel-transition;
 
 	&:after {
@@ -41,7 +43,7 @@
 	}
 
 	&:hover, &.active {
-		background: #cccccc;
+		background: #ffffff;
 	}
 
 	&.active:after {
