--- a/css/hansel.css
+++ b/css/hansel.css
@@ -18,7 +18,7 @@
   padding: 0 20px;
   position: relative;
   color: black;
-  background: #dbc195;
+  background: #be1531;
   -webkit-transition-property: all;
   -moz-transition-property: all;
   -o-transition-property: all;
