--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@ $default_border_color: #dbdcdd;
 $main_color: #F4EBDC;
 
 $red: #E62041;
+$dark_red: #cc223e;
 
 /* VARIABLES END */
 
@@ -86,11 +87,11 @@ a {
 
 /* LAYOUT */
 .column {
-	width: 1000px;
+	width: 1150px;
 	margin: 0 auto;
 
 	&:not(:first-child) {
-		margin: 50px auto;
+		margin: 100px auto;
 	}
 }
 
@@ -142,39 +143,6 @@ h1 {
 	padding: 6px 15px;
 }
 
-// .btn-apply {
-// 	background: $green;
-// 	border-color: $green;
-
-// 	&:hover {
-// 		background: #ffffff;
-// 		color: $green;
-// 	}
-// }
-
-// .btn-deny {
-// 	background: $green;
-// 	border-color: $green;
-
-// 	&:hover {
-// 		background: #ffffff;
-// 		color: $green;
-// 	}
-// }
-
-// .btn-logout {
-// 	background: $green;
-// 	text-decoration: none;
-// 	font-size: 0.8em;
-// 	border: none;
-// 	padding: 2px 14px 3px;
-
-// 	&:hover {
-// 		background: #ffffff;
-// 		color: $green;
-// 	}
-// }
-
 .link-simple {
 	text-decoration: none;
 	font-size: 1.3em;
@@ -190,150 +158,66 @@ h1 {
 
 
 
-/* MENU'S */
-// .navigation {
+/* BREADCRUMBS */
+.breadcrumb {
+	float: left;
 
-// 	li {
+	li {
+		float: left;
+		margin-right: 15px;
 
-// 		&:first-child {
-// 		}
-// 	}
-	
-// 	.menu-item {
-// 		padding: 0 0 0 15px;
-// 		width: 100%;
-// 		height: 50px;
-// 		display: block;
-// 		font-size: 1.6em;
-// 		line-height: 3.2em;
-// 		color: #ffffff;
-// 		background: url(../images/menuArrows.png) no-repeat;
-// 		background-position: 222px 14px;
+		&:first-child a:before {
+			display: none;
+		}
+	}
 
-// 		&:hover, &.active {
-// 			color: #000000;
-// 			background-color: $green;
-// 			background-position: 222px -115px;
-// 		}
-// 	}
-// }
+	a {
+		display: block;
+		width: 100%;
+		@include sizing;
+		@include master_transition;
+		height: 50px;
+		font-size: 2em;
+		line-height: 2.5em;
+		padding: 0 20px;
+		margin-right: 5px;
+		position: relative;
+		color: white;
+		background: $red;
 
-// /* breadcrumbs */
-// .breadcrumb {
-// 	float: left;
-// 	margin-left: 10px;
+		&:before, &:after {
+			position: absolute;
+			content: "";
+			height: 0px;
+			width: 0px;
+			top: 0px;
+			border-style: solid;
+			@include master_transition;
+		}
 
-// 	li {
-// 		display: inline-block;
-// 		background: url(../images/breadcrumbsArrow.png) right 0 no-repeat;
-// 		padding: 17px 45px 17px 10px;
-// 		height: 50px;
+		&:after {
+			right: -10px;
+			border-width: 25px 0 25px 10px;
+			border-color: transparent transparent transparent $red;
+		}
 
-// 		&.breadcrumb-mobile-first {
-// 			display: none;
-// 		}
-
-// 		&:last-child {
-// 			background: none;
-// 		}
-// 	}
-
-// 	.breadcrumb-item {
-// 		border-width: 3px;
-// 		padding-bottom: 3px;
-// 		color: #000000;
-// 		font-size: 1.6em;
-// 		display: block;
+		&:before {
+			left: -10px;
+			border-width: 25px 0 25px 10px;
+			border-color: $red $red $red transparent;
+		}
 		
-// 		&:hover, &.active {
-// 			border-width: 2px;
-// 		}
-// 	}
-// }
+		&:hover, &.active {
+			background: $dark_red;
 
-// @media only screen and (max-width: 640px), only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5){ 
-// 	.breadcrumb {
-// 		margin: 0;
+			&:after {
+				border-color: transparent transparent transparent $dark_red;
+			}
 
-// 		li {
-// 			width: 100%;
-// 			height: auto;
-// 			padding: 0px;
-// 			background: transparent;
-// 		}
-// 	}
-
-// 	.breadcrumb-item {
-// 		padding: 5px;
-// 		background: $green;	
-// 		width: 100%;
-// 	}
-// }
-// /* breadcrumbs end */
-
-// /* dropcrumb */
-// $dropcrumb_dropdown_hight: 30px;
-
-// .drop-crumbs-wrapper {
-// 	position: relative;
-// 	display: inline-block;
-// }
-
-// .drop-crumbs-button {
-// 	background: $green;
-// 	width: 100%;
-// 	height: $dropcrumb_dropdown_hight;
-// 	position: relative;
-// 	padding: 0 0 0 12px;
-// 	font-size: 1.4em;
-// 	line-height: 2em;
-// 	color: $green;
-// 	display: none;
-
-// 	&:hover, &.active {
-// 		color: $green;
-// 	}
-
-// 	&:after {
-// 		position: absolute;
-// 		content: "";
-// 		width: 0px;
-// 		height: 0px;
-// 		background: transparent;
-// 		@include transform-origin(5px, 2px);
-// 		border-color: $green transparent transparent transparent;
-// 		top: 12px;
-// 		right: 12px;
-// 	}
-
-// 	&.active:after {
-// 		@include rotate(180deg);
-// 	}
-
-// 	&.active + .drop-crumbs-dropdown {
-// 		display: block;
-// 	}
-// }
-
-// @media only screen and (max-width: 640px), only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5){
-
-// 	.drop-crumbs-dropdown {
-// 		position: absolute;
-// 		display: none;
-// 		top: $dropcrumb_dropdown_hight;
-// 	}
-
-// 	.drop-crumbs-wrapper {
-// 		width: 100%;
-// 		padding: 0 20px;
-// 		height: $dropcrumb_dropdown_hight;
-// 		margin: 10px 0;
-// 	}
-
-// 	.drop-crumbs-button {
-// 		display: block;
-// 	}
-// }
-/* dropcrumb end */
-
-/* MENU'S END */
+			&:before {
+				border-color: $dark_red $dark_red $dark_red transparent;
+			} 
+		}
+	}
+}
+/* BREADCRUMBS END */
