--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,10 @@ a {
 /* RESETS END */
 /* LAYOUT */
 .column {
-  width: 1000px;
+  width: 1150px;
   margin: 0 auto; }
   .column:not(:first-child) {
-    margin: 50px auto; }
+    margin: 100px auto; }
 
 .column-six {
   width: 50%;
@@ -135,6 +135,64 @@ h1 {
     text-decoration: underline; }
 
 /* BUTTONS AND LINKS END */
-/* MENU'S */
-/* dropcrumb end */
-/* MENU'S END */
+/* BREADCRUMBS */
+.breadcrumb {
+  float: left; }
+  .breadcrumb li {
+    float: left;
+    margin-right: 15px; }
+    .breadcrumb li:first-child a:before {
+      display: none; }
+  .breadcrumb a {
+    display: block;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    height: 50px;
+    font-size: 2em;
+    line-height: 2.5em;
+    padding: 0 20px;
+    margin-right: 5px;
+    position: relative;
+    color: white;
+    background: #e62041; }
+    .breadcrumb a:before, .breadcrumb a:after {
+      position: absolute;
+      content: "";
+      height: 0px;
+      width: 0px;
+      top: 0px;
+      border-style: solid;
+      -webkit-transition-property: all;
+      -moz-transition-property: all;
+      -o-transition-property: all;
+      transition-property: all;
+      -webkit-transition-duration: 0.3s;
+      -moz-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      transition-duration: 0.3s; }
+    .breadcrumb a:after {
+      right: -10px;
+      border-width: 25px 0 25px 10px;
+      border-color: transparent transparent transparent #e62041; }
+    .breadcrumb a:before {
+      left: -10px;
+      border-width: 25px 0 25px 10px;
+      border-color: #e62041 #e62041 #e62041 transparent; }
+    .breadcrumb a:hover, .breadcrumb a.active {
+      background: #cc223e; }
+      .breadcrumb a:hover:after, .breadcrumb a.active:after {
+        border-color: transparent transparent transparent #cc223e; }
+      .breadcrumb a:hover:before, .breadcrumb a.active:before {
+        border-color: #cc223e #cc223e #cc223e transparent; }
+
+/* BREADCRUMBS END */
