--- a/css/hansel.css
+++ b/css/hansel.css
@@ -7,7 +7,7 @@
   position: relative; }
 
 .hansel-crumb {
-  display: block;
+  display: none;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -61,7 +61,10 @@
   .hansel-crumb.active + .hansel-breadcrumbs {
     display: block; }
 
-@media only screen and (max-width: 2560px), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+@media only screen and (max-width: 320px), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  .hansel-crumb {
+    display: block; }
+
   .hansel-breadcrumbs {
     width: 100%;
     display: none;
@@ -78,29 +81,14 @@
       position: absolute;
       top: -16px;
       right: 20px; }
+    .hansel-breadcrumbs li {
+      width: 100%; }
     .hansel-breadcrumbs a {
       height: 50px;
+      width: 100%;
       display: block;
       color: black;
       font-size: 1.6em;
       line-height: 3.2em;
       padding: 0 20px;
-      position: relative; }
-      .hansel-breadcrumbs a:after {
-        content: "";
-        width: 0px;
-        height: 3px;
-        background: #cccccc;
-        -webkit-transition-property: all;
-        -moz-transition-property: all;
-        -o-transition-property: all;
-        transition-property: all;
-        -webkit-transition-duration: 0.3s;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        position: absolute;
-        bottom: 0px;
-        left: 0px; }
-      .hansel-breadcrumbs a:hover:after {
-        width: 100%; } }
+      position: relative; } }
