--- a/css/hansel.css
+++ b/css/hansel.css
@@ -8,6 +8,7 @@
 
 .hansel-crumb {
   display: none;
+  cursor: pointer;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
